--- a/app/AlcoholCompass/res/layout/fragment_navigation.xml
+++ b/app/AlcoholCompass/res/layout/fragment_navigation.xml
@@ -11,4 +11,30 @@
         android:layout_centerVertical="true"
         android:src="@drawable/arrow" />
 
+    <LinearLayout
+        android:id="@+id/buttonHolder"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:orientation="horizontal" >
+
+        <Button
+            android:id="@+id/cmdSignup"
+            style="?android:attr/buttonBarButtonStyle"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Mehr" />
+
+        <Button
+            android:id="@+id/cmdLogin"
+            style="?android:attr/buttonBarButtonStyle"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Navigation" />
+    </LinearLayout>
+
 </RelativeLayout>
