--- a/app/AlcoholCompass/res/layout/fragment_navigation.xml
+++ b/app/AlcoholCompass/res/layout/fragment_navigation.xml
@@ -12,7 +12,7 @@
         android:src="@drawable/arrow" />
 
     <LinearLayout
-        android:id="@+id/buttonHolder"
+        style="?android:attr/buttonBarStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
@@ -21,17 +21,17 @@
         android:orientation="horizontal" >
 
         <Button
-            android:id="@+id/cmdSignup"
+            android:id="@+id/buttonShowMore"
             style="?android:attr/buttonBarButtonStyle"
-            android:layout_width="fill_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Mehr" />
 
         <Button
-            android:id="@+id/cmdLogin"
+            android:id="@+id/buttonNavigation"
             style="?android:attr/buttonBarButtonStyle"
-            android:layout_width="fill_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Navigation" />
