--- a/app/AlcoholCompass/res/layout/fragment_navigation.xml
+++ b/app/AlcoholCompass/res/layout/fragment_navigation.xml
@@ -11,7 +11,7 @@
         android:layout_above="@+id/linearLayout1"
         android:layout_centerHorizontal="true"
         android:padding="30dp"
-        android:src="@drawable/arrow" />
+        android:src="@drawable/beerbottle" />
 
     <LinearLayout
         style="?android:attr/buttonBarStyle"
