--- a/app/AlcoholCompass/res/layout/fragment_navigation.xml
+++ b/app/AlcoholCompass/res/layout/fragment_navigation.xml
@@ -14,6 +14,7 @@
         android:src="@drawable/beerbottle" />
 
     <LinearLayout
+        android:id="@+id/linearLayout1"
         style="?android:attr/buttonBarStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -48,8 +49,37 @@
         android:background="#BBFFFFFF"
         android:divider="@color/blue"
         android:dividerHeight="3dp"
-        android:visibility="invisible" >
-
+        android:visibility="gone" >
     </ListView>
+
+    <TextView
+        android:id="@+id/textViewPlaceDistance"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/linearLayout1"
+        android:layout_centerHorizontal="true"
+        android:background="@drawable/label_background_large"
+        android:gravity="center"
+        android:layout_marginBottom="5dp"
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp"
+        android:paddingTop="2dp"
+        android:text="230m"
+        android:textColor="#FFFFFF" />
+
+    <TextView
+        android:id="@+id/textViewPlaceName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/textViewPlaceDistance"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/label_background_large"
+        android:gravity="center"
+        android:paddingLeft="12dp"
+        android:paddingRight="12dp"
+        android:paddingTop="2dp"
+        android:text="Das kleine Büdchen"
+        android:textColor="#FFFFFF" />
 
 </RelativeLayout>
