--- a/backend/app/views/locations/_form.html.erb
+++ b/backend/app/views/locations/_form.html.erb
@@ -2,6 +2,7 @@
   <%= f.inputs do %>
     <%= f.input :name %>
     <%= f.input :address %>
+    <%= f.input :hours %>
   <% end %>
 
   <%= f.actions do %>
