--- a/app/AlcoholCompass/res/values/color.xml
+++ b/app/AlcoholCompass/res/values/color.xml
@@ -2,4 +2,5 @@
 <resources>
     <color name="blue">@android:color/holo_blue_light</color>
     <color name="grey">#353535</color>
+    <color name="red">#7B2A14</color>
 </resources>
