--- a/app/AlcoholCompass/res/layout/fragment_navigation.xml
+++ b/app/AlcoholCompass/res/layout/fragment_navigation.xml
@@ -85,8 +85,8 @@
             android:layout_width="match_parent"
             android:layout_height="250dp"
             android:background="#BBFFFFFF"
-            android:divider="@color/blue"
-            android:dividerHeight="3dp"
+            android:divider="@color/grey"
+            android:dividerHeight="1dp"
             android:visibility="visible" >
         </ListView>
         
