--- a/app/AlcoholCompass/res/layout/fragment_showtell.xml
+++ b/app/AlcoholCompass/res/layout/fragment_showtell.xml
@@ -46,7 +46,7 @@
        android:textSize="45sp" />
 
    <TextView
-       android:id="@+id/textView1"
+       android:id="@+id/textViewDialogSuccessTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewAlcoholCompass"
@@ -58,7 +58,7 @@
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayoutButtonBarShowTell"
-       android:layout_below="@+id/textView1"
+       android:layout_below="@+id/textViewDialogSuccessTitle"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="Made with Pretzels, Beer &amp; Love\nJan-Erik Rediger\nSimon Grätzer\nFrederik Schweiger" />
