--- a/app/AlcoholCompass/res/layout/fragment_navigation.xml
+++ b/app/AlcoholCompass/res/layout/fragment_navigation.xml
@@ -46,13 +46,13 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/linearLayoutButtonBarMain"
         android:layout_centerHorizontal="true"
+        android:layout_marginBottom="5dp"
         android:background="@drawable/label_background_large"
         android:gravity="center"
-        android:layout_marginBottom="5dp"
         android:paddingLeft="15dp"
         android:paddingRight="15dp"
         android:paddingTop="2dp"
-        android:text="230m"
+        android:text="..."
         android:textColor="#FFFFFF" />
 
     <TextView
@@ -67,7 +67,7 @@
         android:paddingLeft="12dp"
         android:paddingRight="12dp"
         android:paddingTop="2dp"
-        android:text="Das kleine Büdchen"
+        android:text="bitte warten"
         android:textColor="#FFFFFF" />
 
     <LinearLayout
