--- a/app/AlcoholCompass/res/layout/row_guestbook.xml
+++ b/app/AlcoholCompass/res/layout/row_guestbook.xml
@@ -17,7 +17,7 @@
         android:paddingTop="10dp"
         android:text="Max Mustermann"
         android:textColor="@color/grey"
-        android:textSize="20sp" />
+        android:textSize="18sp" />
 
     <TextView
         android:id="@+id/textViewRowDialogDate"
@@ -28,6 +28,7 @@
         android:layout_alignParentTop="true"
         android:gravity="center_vertical"
         android:paddingBottom="10dp"
+        android:paddingLeft="5dp"
         android:paddingRight="10dp"
         android:paddingTop="10dp"
         android:text="22.06.2013"
