--- a/app/AlcoholCompass/res/layout/fragment_navigation.xml
+++ b/app/AlcoholCompass/res/layout/fragment_navigation.xml
@@ -94,8 +94,8 @@
             style="?android:attr/buttonBarButtonStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#99FFFFFF"
-            android:text="@string/close" />
+            android:alpha="0.75"
+            android:background="@drawable/arrow_up" />
 
     </LinearLayout>
 
