--- a/app/AlcoholCompass/res/layout/dialog_success.xml
+++ b/app/AlcoholCompass/res/layout/dialog_success.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?><RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:background="#FFFFFF" >
 
     <TextView
         android:id="@+id/textViewDialogSuccessTitle"
@@ -9,7 +10,7 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:paddingTop="15dp"
-        android:text="Success"
+        android:text="Geschafft"
         android:textColor="@color/red"
         android:textSize="45sp" />
 
@@ -19,12 +20,13 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/textViewDialogSuccessTitle"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:gravity="center_horizontal"
         android:padding="5dp"
-        android:text="Please take a moment and add yourself to our Guestbook"
+        android:text="@string/dialog_guestbook_impress"
         android:textAlignment="center"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textSize="15sp" />
 
     <LinearLayout
         android:id="@+id/guestbookForm"
@@ -57,16 +59,17 @@
             android:layout_height="1dp"
             android:background="@color/blue" />
 
-    </LinearLayout>
+        <TextView
+            android:id="@+id/textViewGuestbookTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="5dp"
+            android:text="@string/dialog_guestbook_title"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:textStyle="italic" />
 
-    <TextView
-        android:id="@+id/textViewGuestbookTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/listViewDialog"
-        android:layout_centerHorizontal="true"
-        android:text="@string/dialog_guestbook_title"
-        android:textAppearance="?android:attr/textAppearanceSmall" />
+    </LinearLayout>
 
     <ListView
         android:id="@+id/listViewDialog"
@@ -77,7 +80,7 @@
         android:layout_alignParentRight="true"
         android:layout_below="@id/guestbookForm"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp" >
+        android:layout_marginTop="5dp" >
     </ListView>
 
 </RelativeLayout>
